# website

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.yaml  README.md  mkdocs.yml  pyproject.toml  renovate.json  zensical.toml
.github/: dependabot.yaml
.github/workflows/: pages.yaml  pre-commit.yaml
content/: authorized_keys  index.md  robots.txt
content/blog/: .authors.yml
content/guides/: http-status-codes.md  ipv6.md  macos-setup.md  mkdocs-material-insider-github-pages-action.md  nginx-proxy-manager-udmp.md  rpi-k8s-talos-terraform.md  terminal-and-shell-setup.md  zfs-notes.md
content/guides/terminal-and-shell-setup/: .zshrc  acecat.omp.toml  atuin_config.toml  generate_completions  install.sh  prep_debian.sh  zsh_aliases  zsh_functions  zsh_keybinds  zshrc
content/links/: computers.md  recommended-reading.md
content/literary/: recommended-reading.md
content/notes/: dimensional_lumber.csv  dimensional_lumber.md  http-status-codes.md  ipv6.md  zfs.md
content/notes/zfs/: zrepl.yaml
content/overrides/: sitemap.xml
content/projects/: 400amp-upgrade.md  battery-backup.md
content/projects/smart-home/: architecture.md  garage-door.md  switches.md
content/smart-home/: switches.md
content/stylesheets/: extra.css  ipv6.css  tables.css
