[tool.poetry]
name = "website"
version = "0.1.0"
description = "https://lickthesalt.com"
authors = ["Andrew LeCody <andrewlecody@gmail.com>"]
license = "Creative Commons Attribution 4.0 International"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mkdocs-material = {git = "https://github.com/squidfunk/mkdocs-material-insiders.git"}
mkdocs-minify-plugin = "^0.8.0"
Pillow = "^10.1.0"
CairoSVG = "^2.7.0"
pngquant = "^1.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
