[project]
name = "website"
version = "0.1.0"
description = "https://lickthesalt.com"
authors = [{name = "Andrew LeCody"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Framework :: MkDocs"]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs-material",
    "mkdocs-minify-plugin>=0.8.0",
    "pillow>=10.4.0",
    "cairosvg>=2.7.1",
    "pngquant>=1.0.8",
]

[tool.uv.sources]
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders" }
