[project]
name = "website"
version = "0.1.0"
description = "https://andrew.lecody.com"
authors = [{name = "Andrew LeCody"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Framework :: MkDocs"]
requires-python = ">=3.12"
dependencies = [
    "click==8.3.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material[imaging]",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-table-reader-plugin>=3.1.0",
    "pre-commit>=4.3.0",
]

[tool.uv.sources]
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders" }
